fixed white space

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ a:hover, a:focus {
 body {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
-  color: #6c7279; }
+  color: #6c7279; 
+  margin: 0px;}
 
 ul, ol {
   margin: 0;
@@ -276,7 +277,8 @@ ul li {
   -o-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
-  min-height: 750px; }
+  min-height: 750px; 
+ }
 
 .banner-text {
   padding-top: 25%; 
@@ -390,7 +392,8 @@ ul li {
     margin-bottom: 20px; }
 
 .social-icons, .footer .footer-share {
-  margin-top: 30px; }
+  margin-top: 30px; 
+  text-align: center;}
   .social-icons li, .footer .footer-share li {
     float: left; }
   .social-icons a, .footer .footer-share a {
@@ -449,7 +452,8 @@ ul li {
 	$Footer
 ========================================================================== */
 .footer {
-  text-align: center; }
+  text-align: center;
+ }
   .footer-top {
     background-color: #2B445E;
     padding-top: 50px; }
@@ -984,6 +988,19 @@ section#timeline article:nth-child(5) div.inner h2:after {
 
 @media only screen and (max-width:500px){
 
+html, body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+   
+}
+
+.banner-text h1{
+  font-size: 42px;
+}
+
   section#timeline article div.inner span.date{
    left:10px;
 
@@ -998,5 +1015,14 @@ section#timeline article:nth-child(5) div.inner h2:after {
   section#timeline article div.inner h2:after{
     left:-5px;
   }
+  .logo img{
+    width:75px;
+  }
+
+div.work{
+    min-height:150px;
+
+  }
+
 
 }
